salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>