salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>