salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Emergency_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relation__c</fullName>
    <label>Emergency Contact Relation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>