salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Enigma_Summary__c.field-meta.xml
<CustomField>
    <fullName>Enigma_Summary__c</fullName>
    <label>Enigma Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>