salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Height_in__c.field-meta.xml
<CustomField>
    <fullName>Height_in__c</fullName>
    <label>Height (in)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>