salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Last_Enigma_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Enigma_Request_Id__c</fullName>
    <label>Last Enigma Request Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>