salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Insurance Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>