salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Primary_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Provider__c</fullName>
    <label>Primary Care Provider</label>
    <length>120</length>
    <type>Text</type>
</CustomField>