salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>