salesforce-healthcare-demo/force-app/main/default/objects/Patient__c/fields/Weight_lb__c.field-meta.xml
<CustomField>
    <fullName>Weight_lb__c</fullName>
    <label>Weight (lb)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>